SPA, FIX API DONE

--- a/src/SPA/src/app/admin/layouts/layouts.component.html
+++ b/src/SPA/src/app/admin/layouts/layouts.component.html
@@ -46,7 +46,7 @@
                alt=""
                src="assets/imgs/logo.png"
                style="max-height: 32px; max-width: 54px" />
-          <span class="sp-18 m-r-25 ng17color">Base Admin</span>
+          <span class="sp-18 m-r-25 ng17color">ADMIN</span>
           <div class="flex-1">
             @if (isSplitNav) {
             <app-nav-bar [isMixinHead]="true" />
