--- a/src/SPA/src/app/admin/pages/login/login.component.html
+++ b/src/SPA/src/app/admin/pages/login/login.component.html
@@ -9,7 +9,7 @@
       <img class="logo"
            alt=""
            src="./assets/imgs/logo.png" />
-      <span class="title">Base Admin</span>
+      <span class="title">ADMIN</span>
       <div class="desc"></div>
     </div>
   </div>
