--- a/src/SPA/src/app/admin/layouts/side-nav/side-nav.component.html
+++ b/src/SPA/src/app/admin/layouts/side-nav/side-nav.component.html
@@ -8,7 +8,7 @@
       <img alt="logo"
            src="assets/imgs/logo.png" />
       <h1 class="animate-02 ng17color"
-          [class.light]="(themesOptions$ | async)!.theme === 'light' && (isNightTheme$ | async) === false">Base admin</h1>
+          [class.light]="(themesOptions$ | async)!.theme === 'light' && (isNightTheme$ | async) === false">admin</h1>
     </a>
   </div>
   }
