--- a/src/SPA/src/app/admin/order-manager/main/main.component.html
+++ b/src/SPA/src/app/admin/order-manager/main/main.component.html
@@ -15,15 +15,19 @@
                    (sortFn)="changeSort($event)"></app-ant-table>
     <ng-template #operationTpl
                  let-orderId="orderId">
-      <span class="operate-text operate-custom"
+      <span class="operate-text operate-custom" *appHasRole="actionCode.OrderView"
              (click)="viewRow(orderId)"><span nz-icon
                   nzType="search" class="oprerate-view"
                   nzTheme="outline"></span></span>
-      <span class="operate-text operate-custom"
+                  <ng-container >
+ <span class="operate-text operate-custom" *appHasRole="actionCode.OrderDelete"
              (click)="deleteRow(orderId)"><span nz-icon
                   nzType="delete" class="oprerate-delete"
                   nzTheme="outline"></span></span>
-      <span class="operate-text operate-custom"
+                  </ng-container>
+                  
+     
+      <span class="operate-text operate-custom" *appHasRole="actionCode.OrderUpdate"
              (click)="editModal(orderId)"><span nz-icon
                   nzType="edit"
                   nzTheme="outline"></span></span>
@@ -33,7 +37,7 @@
 
 
   <ng-template #tableBtns>
-    <button *appHasRole="actionCode.FunctionCreate"
+    <button *appHasRole="actionCode.OrderCreate"
             class="m-r-8"
             nz-button
             nzType="primary"
@@ -42,7 +46,7 @@
          nzType="plus"></i>
       New
     </button>
-    <button *appHasRole="actionCode.FunctionDelete"
+    <button *appHasRole="actionCode.OrderDelete"
             nz-button
             nzType="default"
            >
